--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
     "@nx/js": "18.0.5",
     "@nx/workspace": "18.0.5",
-    "nx": "18.0.5"
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "nx": "18.0.5",
+    "prettier": "^3.2.5"
   }
 }
